--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "gatsby": "^3.4.1",
+    "gatsby-plugin-image": "^1.4.0",
+    "gatsby-plugin-sharp": "^3.4.1",
     "gatsby-source-contentful": "^5.4.0",
     "gatsby-transformer-remark": "^4.0.0",
+    "gatsby-transformer-sharp": "^3.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
